[package]
name = "example-polygon-p2p"
version = "0.1.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
secp256k1 = { version = "0.30", features = ["rand", "global-context", "std", "recovery"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde_json = "1"
rand = "0.8"

# Reth crates from the official repository
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-ethereum", features = ["network"] }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", package = "reth-discv4", features = ["test-utils"] }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", package = "reth-tracing" }

# Alloy genesis crate aligned with Reth
alloy-genesis = "1.0.24"