[package]
name = "example-polygon-p2p"
version = "0.1.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
secp256k1 = { version = "0.30", features = ["rand", "global-context", "std", "recovery"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
rand = "0.8"

# Reth crates from the official repository
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-ethereum", features = ["network"] }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", package = "reth-discv4", features = ["test-utils"] }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", package = "reth-tracing" }
reth-network-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-types" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", package = "reth-chainspec" }
alloy-primitives = "1.3"
alloy-consensus = "1.0.24"
alloy-json-abi = "1.0.2"
once_cell = "1"
sha3 = "0.10"
alloy-sol-types = "0.7"
ethers-core = { version = "2", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", package = "reth-ecies" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-peers" }
reth-network = { git = "https://github.com/paradigmxyz/reth", package = "reth-network" }

# Alloy genesis crate aligned with Reth
alloy-genesis = "1.0.24"